--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_screenutil: ^5.9.0
   provider: ^6.1.1
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
