--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   provider: ^6.1.1
   dio: ^5.4.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
